
2023-01-16
	* om.tmac (PRINSTYLE): Abort with message if nroff is called on
	a document using PRINTSTYLE TYPESET.

	Fixes <https://savannah.gnu.org/bugs/?63581>.  Thanks to Gene
	for the report.

2022-11-16

	* om.tmac (PAPER): Adjust #R_MARGIN to work with papersize.tmac.

2022-10-23  G. Branden Robinson <g.branden.robinson@gmail.com>

	* om.tmac (FORCE_RECTO): Use backslash before newline when
	starting multi-line conditional block.

2022-09-02

	* examples/mom-pdf.mom: Fixes missing parameter to \*[SIZE] at
	line 457.

	* om.tmac: Fixes CODE <anything> not restoring point size
	correctly.  The point size was being stored in a number register
	instead of a string.

	* BUGS: Updated.

	Fixes <https://savannah.gnu.org/bugs/?62996>.

2022-08-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPDFMOM): Pass `PDFMOMBIN` '-K utf8', not '-k', in
	case 'configure' didn't find uchardet.

	Fixes <https://savannah.gnu.org/bugs/?62975>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-31

	* Make mom emit a warning and abort when tbl(1) data present
		without a corresponding -t on the command line.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* momdoc/appendices.html: Reflect file rename in groff
	distribution: the name of the file mapping Adobe Glyph List
	names to groff special character identifiers for text (as
	opposed to "special") fonts has changed from "textmap" to
	"text.map".

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am (MOMPROCESSEDEXAMPLEFILES): Include "typesetting.pdf"
	only if `HAVE_URW_FONTS`, since the document demands them.

2022-05-20  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am: Rename `BUILD_PDFDOC` to `USE_GROPDF`.

2022-05-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* mom.am ($(MOMPROCESSEDEXAMPLEFILES)): Depend on new name for
	devpdf stamp file.

2022-04-12  Ingo Schwarze <schwarze@openbsd.org>
