@@ -696,11 +696,11 @@ would do the trick.
 </div>
 
 <div class="box-macro-args">
-Macro: <b>UNDERSCORE</b> <kbd class="macro-args">[ &lt;distance below baseline&gt; ] &quot;&lt;string&gt;&quot;</kbd>
+Macro: <b>UNDERSCORE</b> <kbd class="macro-args">[ &lt;distance below baseline&gt; ] [ PREFIX &lt;prefix&gt; ] [ SUFFIX &lt;suffix&gt; ] &quot;&lt;string&gt;&quot;</kbd>
 </div>
 
 <p class="requires">
-&bull;&nbsp;Optional argument requires a <a href="definitions.html#unitofmeasure">unit of measure</a>
+&bull;&nbsp;&lt;distance below baseline&gt; requires a <a href="definitions.html#unitofmeasure">unit of measure</a>
 </p>
 
 <p>
@@ -710,7 +710,7 @@ required
 The string must be enclosed in double-quotes, like this:
 <br/>
 <span class="pre-in-pp">
-  .UNDERSCORE "Unmonitored monopolies breed high prices and poor products."
+  .UNDERSCORE "Unmonitored monopolies breed high prices and poor products"
 </span>
 If you wish to change the distance of the rule from the baseline,
 use the optional argument
@@ -718,7 +718,7 @@ use the optional argument
 (with a unit of measure).
 <br/>
 <span class="pre-in-pp">
-  .UNDERSCORE 3p "Unmonitored monopolies breed high prices and poor products."
+  .UNDERSCORE 3p "Unmonitored monopolies breed high prices and poor products"
 </span>
 The above places the upper edge of the underscore 3 points below the
 <a href="definitions.html#baseline">baseline</a>.
@@ -731,6 +731,19 @@ UNDERSCORE can also be used for strikethrough effects by supplying a
 negative value to the distance argument.
 </p>
 </div>
+
+<p>
+<kbd>PREFIX</kbd> and <kbd>SUFFIX</kbd> allow you to add
+non-underscored punctuation (or other glyphs) to the beginning
+and/or end of the underscored string.  If the argument to either
+<kbd>PREFIX</kbd> or <kbd>SUFFIX</kbd> contains spaces, surround the
+argument with double-quotes.  For example, the following underscores
+the text string but not the surrounding punctuation.
+<br/>
+<span class="pre-in-pp">
+  .UNDERSCORE PREFIX ( SUFFIX .) "Unmonitored monopolies breed high prices and poor products"
+</span>
+</p>
 
 <div class="box-tip">
 <p class="tip">
@@ -806,8 +819,9 @@ rather than
   .UNDERSCORE "\*[red]text to underscore\*[black]"
 </span>
 The latter will render the text in red but the underscore in black.
-You can use this to create truly rainbow effects if you want, e.g.
-text in red, underscore in blue, and prevailing type in black:
+You can, of course, use this to create rainbow effects if that's
+what you want, e.g. text in red, underscore in blue, and prevailing
+type in black:
 <br/>
 <span class="pre-in-pp">
   .UNDERSCORE "\*[red]text to underscore\*[blue]"
@@ -822,11 +836,14 @@ text in red, underscore in blue, and prevailing type in black:
 </div>
 
 <div class="box-macro-args">
-Macro: <b>UNDERSCORE2</b> <kbd class="macro-args">[ &lt;distance below baseline&gt; [ &lt;distance between rules&gt; ] ] &quot;&lt;string&gt;&quot;</kbd>
+Macro: <b>UNDERSCORE2</b> <kbd class="macro-args">[ &lt;distance below baseline&gt; [ &lt;distance between rules&gt; ]  [ PREFIX &lt;prefix&gt; ] [ SUFFIX &lt;suffix&gt; ]  &quot;&lt;string&gt;&quot;</kbd>
 </div>
 
 <p class="requires">
-&bull;&nbsp;Optional arguments require a <a href="definitions.html#unitofmeasure">unit of measure</a>
+&bull;&nbsp;&lt;distance below baseline&gt;
+and
+&lt;distance between rules&gt;
+require a <a href="definitions.html#unitofmeasure">unit of measure</a>
 </p>
 
 <p>
@@ -836,7 +853,7 @@ the required
 The string must be enclosed in double-quotes, like this:
 <br/>
 <span class="pre-in-pp">
-  .UNDERSCORE2 "Unmonitored monopolies breed high prices and poor products."
+  .UNDERSCORE2 "Unmonitored monopolies breed high prices and poor products"
 </span>
 The default distance between the two rules is 2 points, measured
 from the bottom edge of the upper rule to the top edge of the lower
@@ -851,7 +868,7 @@ use the optional argument
 (with a unit of measure), e.g.
 <br/>
 <span class="pre-in-pp">
-  .UNDERSCORE2 3p "Unmonitored monopolies breed high prices and poor products."
+  .UNDERSCORE2 3p "Unmonitored monopolies breed high prices and poor products"
 </span>
 which places the upper edge of the first rule of the double
 underscore 3 points below the baseline.
@@ -861,17 +878,35 @@ underscore 3 points below the baseline.
 If you wish to change the distance between the two rules as well,
 use the second optional argument
 <kbd>&lt;distance&nbsp;between&nbsp;rules&gt;</kbd>
-(with a unit of measure).  Be aware that you must give a value for
-the first optional argument if you want to use the second.  The
-distance between the two rules is measured from the bottom edge of
-the upper rule to the top edge of the lower one.
+(with a unit of measure).  The distance between the two rules
+is measured from the bottom edge of the upper rule to the top
+edge of the lower one.  Be aware that you must give a value for
+<kbd>&lt;distance&nbsp;below&nbsp;baseline&gt;</kbd> if you want to
+use <kbd>&lt;distance&nbsp;between&nbsp;rules&gt;</kbd>.
 </p>
 
 <p>
+<kbd>PREFIX</kbd> and <kbd>SUFFIX</kbd> allow you to add
+non-underscored punctuation (or other glyphs) to the beginning
+and/or end of the double-underscored string.  If the argument to
+either <kbd>PREFIX</kbd> or <kbd>SUFFIX</kbd> contains spaces,
+surround the argument with double-quotes.  For example, the
+following double-underscores the text string but not the surrounding
+punctuation.
+<br/>
+<span class="pre-in-pp">
+  .UNDERSCORE2 PREFIX ( SUFFIX .) "Unmonitored monopolies breed high prices and poor products"
+</span>
 The weight (thickness) of double underscores may be controlled with
 the macro
 <a href="#underscore-weight">UNDERSCORE_WEIGHT</a>
 (q.v).
+</p>
+
+<p>
+See
+<a href="#underscore-color">here</a>
+for advice on colourising double-underscored text.
 </p>
 
 <div class="box-tip">
